--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_localizations:
+    sdk: flutter
   go_router: ^10.1.1
+  intl: ^0.18.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -49,7 +52,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
