--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  badges: ^3.1.2
   carousel_slider: ^4.2.1
   flutter:
     sdk: flutter
@@ -38,6 +39,7 @@ dependencies:
   go_router: ^10.1.2
   google_fonts: ^5.1.0
   intl: ^0.18.1
+  json_annotation: ^4.8.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,8 +47,10 @@ dependencies:
   # cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.7.1
   lint: ^2.1.2
 
 # For information on the generic Dart part of this file, see the
