--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,11 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
+  flutter_secure_storage: ^9.0.0
+  get_it: ^7.6.4
   go_router: ^10.1.2
   google_fonts: ^5.1.0
+  http: ^1.1.0
   intl: ^0.18.1
   json_annotation: ^4.8.1
 
