--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,14 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_secure_storage: ^9.0.0
+  flutter_spinkit: ^5.2.0
   get_it: ^7.6.4
   go_router: ^10.1.2
   google_fonts: ^5.1.0
   http: ^1.1.0
   intl: ^0.18.1
   json_annotation: ^4.8.1
+  loader_overlay: ^2.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
