--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,12 @@ dependencies:
   flutter_spinkit: ^5.2.0
   get_it: ^7.6.4
   go_router: ^10.1.2
-  google_fonts: ^5.1.0
+  google_fonts: ^6.1.0
   http: ^1.1.0
   intl: ^0.18.1
   json_annotation: ^4.8.1
   loader_overlay: ^2.3.2
+  url_strategy: ^0.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
