--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
   flutter_secure_storage: ^9.0.0
   flutter_spinkit: ^5.2.0
+  font_awesome_flutter: ^10.5.0
   get_it: ^7.6.4
   go_router: ^10.1.2
   google_fonts: ^6.1.0
